@@ -202,12 +202,12 @@ int main(void)
     if ((c = hgetc(fin)) != EOF) fail("chars: hgetc (EOF) returned %d", c);
     if (hclose(fin) != 0) fail("hclose(test/hfile_chars.tmp) for reading");
 
-    fin = hopen("data:hello, world!\n", "r");
+    fin = hopen("data:,hello, world!%0A", "r");
     if (fin == NULL) fail("hopen(\"data:...\")");
     n = hread(fin, buffer, 300);
     if (n < 0) fail("hread");
     buffer[n] = '\0';
-    if (strcmp(buffer, "hello, world!\n") != 0) fail("hread result");
+    if (strcmp(buffer, "hello, world!\x0A") != 0) fail("hread result");
     if (hclose(fin) != 0) fail("hclose(\"data:...\")");
 
     fin = hopen("test/xx#blank.sam", "r");
@@ -215,10 +215,28 @@ int main(void)
     if (hread(fin, buffer, 100) != 0) fail("test/xx#blank.sam is non-empty");
     if (hclose(fin) != 0) fail("hclose(\"test/xx#blank.sam\") for reading");
 
-    fin = hopen("data:", "r");
+    fin = hopen("data:,", "r");
     if (fin == NULL) fail("hopen(\"data:\") for reading");
     if (hread(fin, buffer, 100) != 0) fail("empty data: URL is non-empty");
     if (hclose(fin) != 0) fail("hclose(\"data:\") for reading");
+
+    fin = hopen("data:;base64,"
+// Wikipedia's example quote from Thomas Hobbes' Leviathan
+"TWFuIGlzIGRpc3Rpbmd1aXNoZWQsIG5vdCBvbmx5IGJ5IGhpcyByZWFzb24sIGJ1dCBieSB0aGlz"
+"IHNpbmd1bGFyIHBhc3Npb24gZnJvbSBvdGhlciBhbmltYWxzLCB3aGljaCBpcyBhIGx1c3Qgb2Yg"
+"dGhlIG1pbmQsIHRoYXQgYnkgYSBwZXJzZXZlcmFuY2Ugb2YgZGVsaWdodCBpbiB0aGUgY29udGlu"
+"dWVkIGFuZCBpbmRlZmF0aWdhYmxlIGdlbmVyYXRpb24gb2Yga25vd2xlZGdlLCBleGNlZWRzIHRo"
+"ZSBzaG9ydCB2ZWhlbWVuY2Ugb2YgYW55IGNhcm5hbCBwbGVhc3VyZS4=", "r");
+    if (fin == NULL) fail("hopen(\"data:;base64,...\")");
+    n = hread(fin, buffer, 300);
+    if (n < 0) fail("hread for base64");
+    buffer[n] = '\0';
+    if (strcmp(buffer, "Man is distinguished, not only by his reason, but by "
+"this singular passion from other animals, which is a lust of the mind, that "
+"by a perseverance of delight in the continued and indefatigable generation "
+"of knowledge, exceeds the short vehemence of any carnal pleasure.") != 0)
+        fail("hread result for base64");
+    if (hclose(fin) != 0) fail("hclose(\"data:;base64,...\")");
 
     return EXIT_SUCCESS;
 }
